Update diode responses plots

--- a/5_ANITAinstrument.tex
+++ b/5_ANITAinstrument.tex
@@ -219,10 +219,10 @@ If the power output is lower than the threshold multiplied by the diode RMS at a
   the L0 trigger (right).
 
 \begin{figure}[!h]\centering
-  \includegraphics[width=.45\linewidth]{./Figs/newnoise_503_0_0_4_diodeOutput.pdf}
-  \includegraphics[width=.45\linewidth]{./Figs/newnoise_503_0_0_0_diodeOutput.pdf}
+  \includegraphics[width=.45\linewidth]{./Figs/ExampleDiodeOutput_NOpass.pdf}
+  \includegraphics[width=.45\linewidth]{./Figs/ExampleDiodeOutput_pass.pdf}
   \caption{Example of typical diode output coming from a pure thermal
-    noise waveform (left) and from a strong pulse (right). The red
+    noise waveform (left) and from a pulse (right). The red
     line shows the value of $V_T \cdot V_{RMS}$, showing that the
     waveform on the right passes the L0 trigger and the waveform on
     the left does not.}
